# javabox

./: Cargo.toml  Makefile  README.md  TODO.md  thoughts.md
doc/: gradle-wrapper.md  jdk-auto-get.md  jdk-download-adoptium.md  mvn-wrapper.md
examples/: multicall-builder.rs  multicall-derive.rs  wtf.rs
launchers/: mvnw
src/: config.rs  gradle.rs  java_hash.rs  javabox.rs  main.rs  mvn.rs  utils.rs
src/javabox/: cmd_adoptium.rs
src/javabox/cmd_setup/: mod.rs
src/mvn/: centralrepo.rs
tests/: test_hash.sh
tests/ccmp/: Dockerfile  Makefile
