[package]
name = "javabox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.17", features = ["derive"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
symlink = "0.1.0"
dir = "0.1.2"
url = "2.3.1"
ureq = "2.5.0"
zip-extract = "0.1.1"
serde-xml-rs = "0.6.0"
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"
rust-crypto = "0.2.36"
bigdecimal = "0.3.0"
indicatif = "0.17.1"

[profile.release]
opt-level = 'z' # Optimize for size
lto = true
codegen-units = 1
strip = true  # Automatically strip symbols from the binary.
